--- a/components/Header/style.less
+++ b/components/Header/style.less
@@ -1,4 +1,4 @@
-@import 'static/css/common.less';
+@import '~static/css/common.less';
 
 .header-container {
   width: 100%;
@@ -7,6 +7,7 @@
   display: flex;
 }
 .header-content {
+  .common-content;
 }
 .header-logo {
 }
