--- a/components/Header/style.less
+++ b/components/Header/style.less
@@ -2,12 +2,46 @@
 
 .header-container {
   width: 100%;
-  height: 30px;
+  height: 50px;
   background-color: #fff;
   display: flex;
 }
 .header-content {
-  .common-content;
+  max-width: @contentWidth;
+  margin: auto;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  .header-logo {
+    height: 100%;
+    flex: 1;
+    display: flex;
+    align-items: center;
+    font-size: 14px;
+  }
+  .header-navbar {
+    height: 100%;
+    display: flex;
+    &-item {
+      color: #333;
+      font-size: 1rem;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      padding: 0 20px;
+      cursor: pointer;
+      &:hover {
+        color: @hoverColor;
+      }
+      &.active {
+        color: @hoverColor;
+      }
+    }
+  }
 }
-.header-logo {
+
+@media (max-width:980px) {
+	.header-content {
+    width: 96%;
+  }
 }
