--- a/pages/index/index.less
+++ b/pages/index/index.less
@@ -1,3 +1,85 @@
+// 引入全局变量
+@import '~static/css/common.less';
+
 .home-container {
-  color: red;
+  width: 100%;
+  padding-bottom: 50px;
+  .home-content { 
+    width: 100%;
+    max-width: @contentWidth;
+    margin: auto;
+    margin-top: 10px;
+    display: flex;
+  }
+}
+.home-article {
+  background-color: #fff;
+  margin-right: 10px;
+  flex: 1;
+  width: 700px;
+  .article-list {
+    .article-item {
+      padding: 1.5rem 2rem;
+      cursor: pointer;
+      border-bottom: 1px solid #eee;
+      &-top {
+        display: flex;
+        align-items: baseline;
+        .article-label {
+          font-size: 12px;
+          color: #b71ed7;
+          font-weight: 500;
+        }
+        .article-author {
+          color: #b2bac2;
+          font-size: 12px;
+        }
+        .dot {
+          margin-right: 5px;
+          display: flex;
+          align-items: center;
+          &::after {
+            content: '';
+            margin-left: 4px;
+            width: 2px;
+            height: 2px;
+            border-radius: 100%;
+            background-color: rgb(178, 186, 194);
+            display: inline-block;
+          }
+        }
+      }
+      &-content {
+        margin: 10px 0;
+        font-size: 16px;
+        font-weight: 600;
+        line-height: 1.2;
+        color: #2e3135;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+      &-summary {
+        margin: 10px 0;
+        font-size: 12px;
+        line-height: 1.5;
+        color: rgb(102, 99, 99);
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp:2;
+        -webkit-box-orient: vertical;
+      }
+      &:last-child {
+        border-bottom: none;
+      }
+    }
+  }
+}
+.home-aside {
+  background-color: #fff;
+  width: 240px;
 }
