--- a/static/css/common.less
+++ b/static/css/common.less
@@ -1,6 +1,3 @@
-@contentWidth: 1200px;
+@contentWidth: 960px;
 
-.common-content {
-  width: @contentWidth;
-  margin: 0 auto;
-}
+@hoverColor: #007fff;
