--- a/pages/index/index.less
+++ b/pages/index/index.less
@@ -73,6 +73,14 @@
         -webkit-line-clamp:2;
         -webkit-box-orient: vertical;
       }
+      .article-item-footer {
+        display: flex;
+        .empty { flex: 1; }
+        .view-num {
+          font-size: 12px;
+          color: #ccc;
+        }
+      }
       &:last-child {
         border-bottom: none;
       }
