--- a/static/css/reset.less
+++ b/static/css/reset.less
@@ -1,4 +1,4 @@
-@charset "utf-8";
+
 body, ul, ol, dl, dd, h1, h2, h3, h4, h5, h6, figure, form, fieldset, legend, input, textarea, button, p, blockquote, th, td, pre, xmp {
   margin: 0;
   padding: 0
@@ -103,6 +103,7 @@ body {
   line-height: 1;
   -webkit-text-size-adjust: none;
   height: 100%;
+  background-color: #f4f4f4;
 }
 
 hr {
