--- a/static/css/reset.less
+++ b/static/css/reset.less
@@ -6,7 +6,7 @@ body, ul, ol, dl, dd, h1, h2, h3, h4, h5, h6, figure, form, fieldset, legend, in
 
 body, input, textarea, button, select, pre, xmp, tt, code, kbd, samp {
   line-height: 1.5;
-  font-family: PingFangSC-Light, helvetica, 'Heiti SC'
+  font-family: PingFang SC,Microsoft YaHei, PingFangSC-Light, helvetica, 'Heiti SC'
 }
 
 h1, h2, h3, h4, h5, h6, small, big, input, textarea, button, select {
