--- a/pages/index/index.less
+++ b/pages/index/index.less
@@ -17,6 +17,7 @@
   margin-right: 10px;
   flex: 1;
   width: 700px;
+  padding-bottom: 10px;
   .article-list {
     .article-item {
       padding: 1.5rem 2rem;
@@ -89,4 +90,10 @@
 }
 .home-aside {
   width: 240px;
+}
+.loading-container {
+  display: flex;
+  justify-content: center;
+  color: #ccc;
+  font-size: 1rem;
 }
