--- a/static/css/reset.less
+++ b/static/css/reset.less
@@ -32,9 +32,9 @@ caption, th {
   text-align: inherit
 }
 
-ul, ol, menu {
-  list-style: none
-}
+// ul, ol, menu {
+//   list-style: none
+// }
 
 fieldset, img {
   border: 0
