--- a/components/Header/style.less
+++ b/components/Header/style.less
@@ -18,6 +18,16 @@
     display: flex;
     align-items: center;
     font-size: 14px;
+    a {
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+    }
+    .logo {
+      width: 35px;
+      display: flex;
+      margin-right: 10px;
+    }
   }
   .header-navbar {
     height: 100%;
@@ -35,6 +45,20 @@
       }
       &.active {
         color: @hoverColor;
+      }
+    }
+    .userInfo-container {
+      height: 100%;
+      display: flex;
+      align-items: center;
+      .userInfo-content {
+        height: 100%;
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+        .name {
+          margin-left: 10px;
+        }
       }
     }
   }
