--- a/pages/index/index.less
+++ b/pages/index/index.less
@@ -18,6 +18,9 @@
   flex: 1;
   width: 700px;
   padding-bottom: 10px;
+  li {
+    list-style: none;
+  }
   .article-list {
     .article-item {
       padding: 1.5rem 2rem;
