--- a/components/Recommend/index.less
+++ b/components/Recommend/index.less
@@ -22,6 +22,7 @@
     .recommend-item-title {
       font-size: 1.16rem;
       color: #333;
+      line-height: 1.5;
     }
     .recommend-item-bar {
       display: flex;
