--- a/pages/index/index.less
+++ b/pages/index/index.less
@@ -13,11 +13,14 @@
   }
 }
 .home-article {
-  background-color: #fff;
   margin-right: 10px;
   flex: 1;
   width: 700px;
   padding-bottom: 10px;
+  .home-article-list {
+    margin-bottom: 20px;
+    background-color: #fff;
+  }
   li {
     list-style: none;
   }
