--- a/components/Header/style.less
+++ b/components/Header/style.less
@@ -1,5 +1,4 @@
 @import '~static/css/common.less';
-
 .header-container {
   width: 100%;
   height: 50px;
@@ -22,6 +21,10 @@
       cursor: pointer;
       display: flex;
       align-items: center;
+      color: #333;
+      &:hover {
+        color: #333;
+      }
     }
     .logo {
       width: 35px;
