--- a/components/Header/style.less
+++ b/components/Header/style.less
@@ -4,6 +4,9 @@
   height: 50px;
   background-color: #fff;
   display: flex;
+  position: sticky;
+  top: 0;
+  left: 0;
 }
 .header-content {
   max-width: @contentWidth;
