--- a/pages/editor/index.less
+++ b/pages/editor/index.less
@@ -45,4 +45,12 @@
     margin: 0 20px;
     margin-bottom: 10px;
   }
+  .md-editor-content {
+    height: calc(100vh - 45px) !important;
+    .sec-md {
+      textarea {
+        background-color: #f8f9fa !important;
+      }
+    }
+  }
 }
