--- a/pages/editor/index.less
+++ b/pages/editor/index.less
@@ -47,6 +47,18 @@
   }
   .md-editor-content {
     height: calc(100vh - 45px) !important;
+    position: relative;
+    .word-num {
+      position: absolute;
+      right: 50px;
+      top: 13px;
+      z-index: 10;
+      font-size: 13px;
+      color: #ccc;
+      &.active {
+        color: red;
+      }
+    }
     .sec-md {
       textarea {
         background-color: #f8f9fa !important;
