--- a/components/Footer/style.less
+++ b/components/Footer/style.less
@@ -2,7 +2,7 @@
 
 .footer-container {
   width: 100%;
-  height: 30px;
+  margin-bottom:10px;
   .footer-content {
     max-width: @contentWidth;
     margin: auto;
@@ -13,7 +13,7 @@
     justify-content: center;
     .footer-item {
       font-size: 12px;
-      color: #ccc;
+      color: #939393;
       display: flex;
       align-items: center;
       &.dot::after {
@@ -27,6 +27,10 @@
       }
       &.hover:hover {
         color: #25a4bb;
+      }
+      img {
+        width: 15px;
+        margin-right: 5px;
       }
     }
   }
