--- a/pages/index/index.less
+++ b/pages/index/index.less
@@ -11,12 +11,11 @@
     margin-top: 10px;
     display: flex;
   }
+  .home-row {
+    width: 100%;
+  }
 }
 .home-article {
-  margin-right: 10px;
-  flex: 1;
-  width: 700px;
-  padding-bottom: 10px;
   .home-article-list {
     margin-bottom: 20px;
     background-color: #fff;
@@ -89,9 +88,6 @@
       }
     }
   }
-}
-.home-aside {
-  width: 240px;
 }
 .loading-container {
   display: flex;
