--- a/pages/post/index.less
+++ b/pages/post/index.less
@@ -9,7 +9,7 @@
     max-width: @contentWidth;
     margin: auto;
     margin-top: 10px;
-    display: flex;
+    // display: flex;
     .post-top {
       margin-bottom: 3rem;
       .post-title {
@@ -52,14 +52,8 @@
 }
 .markdown-container {
   background-color: #fff;
-  margin-right: 10px;
-  flex:1;
-  width: 700px;
   padding: 20px;
   .markdown-body {
     width: 100%;
   }
-}
-.right-bar {
-  width: 240px;
 }
