--- a/pages/index/index.less
+++ b/pages/index/index.less
@@ -15,6 +15,10 @@
     width: 100%;
   }
 }
+.home-aside {
+  margin-left: 10px;
+}
+
 .home-article {
   .home-article-list {
     margin-bottom: 20px;
