--- a/components/Labo/style.less
+++ b/components/Labo/style.less
@@ -1,12 +1,30 @@
 .btn-group {
   position: absolute;
-  right: 50px;
+  right: 10px;
   top: 10px;
   z-index: 10;
+  display: flex;
+  flex-direction: column;
   .btn {
-    margin-left: 10px;
+    margin-bottom: 10px;
   }
 }
 .canvas {
   position: relative;
+}
+.loading-container {
+  position: fixed;
+  width: 100%;
+  height: calc(100% - 50px);
+  top: 50px;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 30;
+  font-size: 18px;
+  .label {
+    margin-left: 10px;
+  }
 }
