--- a/components/Labo/style.less
+++ b/components/Labo/style.less
@@ -12,7 +12,7 @@
 .canvas {
   position: relative;
 }
-.loading-container {
+.solider-loading-container {
   position: fixed;
   width: 100%;
   height: calc(100% - 50px);
